# jieba-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  azure-pipelines-template.yml  azure-pipelines.yml  build.rs
.builds/: freebsd.yml  openbsd.yml
.github/workflows/: CI.yml  bench.yml
benches/: jieba_benchmark.rs
capi/: Cargo.toml
capi/src/: lib.rs
dev/bench/: data.js
examples/weicheng/: Cargo.toml
examples/weicheng/src/: main.rs
jieba/: Cargo.toml
jieba-macros/: Cargo.toml
jieba-macros/src/: lib.rs
jieba/benches/: jieba_benchmark.rs
jieba/src/: errors.rs  hmm.rs  lib.rs  posseg.rs  sparse_dag.rs
jieba/src/data/: posseg.txt
jieba/src/keywords/: mod.rs  textrank.rs  tfidf.rs
jieba/tests/: test_wasm.rs
scripts/: convert_posseg.py  train_hmm.py
src/: dag.rs  errors.rs  hmm.rs  lib.rs  load_default.rs  sparse_dag.rs  textrank.rs  tfidf.rs
src/keywords/: mod.rs  textrank.rs  tfidf.rs
src/unstable/: mod.rs
tests/: test_large_file_issue.rs  test_moderate_size.rs  test_wasm.rs
