[workspace]
resolver = "3"
members = ["capi", "jieba", "jieba-macros", "examples/weicheng"]

[workspace.package]
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/messense/jieba-rs"

[workspace.dependencies]
# Workspace dependencies
jieba-rs = { version = "0.8.0", path = "jieba" }
jieba-macros = { version = "0.8.0", path = "jieba-macros" }

# Crates.io dependencies
c_fixed_string = { version = "0.2" }
cedarwood = { version = "0.4" }
codspeed-criterion-compat = { version = "3.0.4" }
derive_builder = { version = "0.20.0" }
fxhash = { version = "0.2.1" }
include-flate = { version = "0.3.0" }
ordered-float = { version = "5.0" }
phf = { version = "0.12.1" }
phf_codegen = { version = "0.12.1" }
rayon = { version = "1.10" }
regex = { version = "1.11.1" }
wasm-bindgen-test = { version = "0.3.0" }
