[package]
name = "jieba-capi"
version.workspace = true

edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
jieba-rs = { workspace = true, features = [
    "textrank",
    "tfidf",
] }
c_fixed_string = { workspace = true }

[lib]
crate-type = ["cdylib"]
