[package]
name = "jieba-macros"
version = "0.7.1"
categories = ["text-processing"]
description = "jieba-rs proc-macro"
keywords = ["nlp", "chinese", "segmenation"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/messense/jieba-rs"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
phf_codegen = "0.11"
