[package]
name = "jieba-macros"
version = "0.8.0"
categories = ["text-processing"]
description = "jieba-rs proc-macro"
keywords = ["nlp", "chinese", "segmenation"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/messense/jieba-rs"
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
phf_codegen = { workspace = true }
