[package]
name = "jieba-rs"
version = "0.8.0"

categories = ["text-processing"]
description = "Jieba Chinese Word Segmentation in Rust"
keywords = ["nlp", "chinese", "segmentation"]

edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = ["default-dict"]
default-dict = ["dep:include-flate"]
tfidf = ["dep:ordered-float", "dep:include-flate"]
textrank = ["dep:ordered-float"]

[dependencies]
jieba-macros = { workspace = true }
cedarwood = { workspace = true }
fxhash = { workspace = true }
include-flate = { workspace = true, optional = true }
ordered-float = { workspace = true, optional = true }
phf = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
codspeed-criterion-compat = { workspace = true }
wasm-bindgen-test = { workspace = true }
rayon = { workspace = true }

[target.'cfg(unix)'.dev-dependencies]
tikv-jemallocator = "0.6.0"

[[bench]]
name = "jieba_benchmark"
harness = false
required-features = ["tfidf", "textrank"]
